5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1865_1641.log
== TEST (2019-07-04 10:20:23) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0
aux2 = 0 
aux3 = 0



for i in size(vet):
	if i/3 == 0 :
		aux = aux + 1
	print(aux)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:21:06) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0
aux2 = 0 
aux3 = 0



for i in size(vet):
	if i%3 == 0 :
		aux = aux + 1
	print(aux)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:21:23) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0
aux2 = 0 
aux3 = 0



for i in vet:
	if i%3 == 0 :
		aux = aux + 1
	print(aux)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:22:18) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0
aux2 = 0 
aux3 = 0



for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:27:17) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0
aux2 = 0 
aux3 = 0



for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

n = zeros(aux, dtype=int)

for i in vet:
	
	

	
-- EXECUTION TIME:
0.581998
-- ERROR:
  File "/home/codebench/codes/1865/1641/main.py", line 23
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:27:17) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0
aux2 = 0 
aux3 = 0



for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

n = zeros(aux, dtype=int)

for i in vet:
	
	

	
-- ERROR:
File "XXXX", line 23
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:30:25) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0
aux2 = 0 
aux3 = 0



for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

n = zeros(aux, dtype=int)

for i in vet:
	if i%3 == 0:
		n = n + 1
print(n)	
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:31:12) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0
aux2 = 0 
aux3 = 0



for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

n = zeros(aux, dtype=int)

for i in vet:
	if i%3 == 0:
		aux2 = aux2 + 1
   print(aux2)	
	

	
-- ERROR:
File "XXXX", line 21
    print(aux2)	
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:31:13) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0
aux2 = 0 
aux3 = 0



for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

n = zeros(aux, dtype=int)

for i in vet:
	if i%3 == 0:
		aux2 = aux2 + 1
   print(aux2)	
	

	
-- EXECUTION TIME:
0.562066
-- ERROR:
  File "/home/codebench/codes/1865/1641/main.py", line 21
    print(aux2)	
               ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:31:25) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0
aux2 = 0 
aux3 = 0

for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

n = zeros(aux, dtype=int)

for i in vet:
	if i%3 == 0:
		aux2 = aux2 + 1
   print(aux2)	
	

	
-- ERROR:
File "XXXX", line 19
    print(aux2)	
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:31:44) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0
aux2 = 0 
aux3 = 0

for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

n = zeros(aux, dtype=int)

for i in vet:
	if i%3 == 0:
		aux2 = aux2 + 1
	print(aux2)	
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:32:24) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0
aux2 = 0 
aux3 = 0

for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

n = zeros(aux, dtype=int)

for i in vet:
	if i%3 == 0:

	

	
-- ERROR:
File "XXXX", line 22
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:37:43) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0


for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0

for j in vet:
	if i%3 == 0:
		p[x] = vet[g]
		x = x+1
	g = g+1
print(p)
	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:38:20) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0


for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0

for j in vet:
	if i%3 == 0:
		p[x] = vet[g]
		x = x + 1
		g = g + 1
	print(p)
	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:38:26) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0


for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0

for j in vet:
	if i%3 == 0:
		p[x] = vet[g]
		x = x + 1
		g = g + 1
	print(p)
	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:38:34) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0


for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0

for j in vet:
	if i%3 == 0:
		p[x] = vet[g]
		x = x + 1
		g = g + 1
	print(p)
	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:38:39) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0


for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0

for j in vet:
	if i%3 == 0:
		p[x] = vet[g]
		x = x + 1
		g = g + 1
print(p)
	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:39:49) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0


for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0

for j in vet:
	if i%3 == 0:
		p[x] = vet[g]
		x = x + 1
	g = g + 1
print(p)
	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:40:01) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0


for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0

for j in vet:
	if j%3 == 0:
		p[x] = vet[g]
		x = x + 1
	g = g + 1
print(p)
	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:40:34) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0


for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0

for j in vet:
	if j%3 == 0:
		p[x] = vet[g]
		x = x + 1
		g = g + 1
print(p)
	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:40:44) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0


for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0

for j in vet:
	if j%3 == 0:
		p[x] = vet[g]
		x = x + 1
	g = g + 1
print(p)
	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:41:39) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0


for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0

for j in range(size(vet)):
	if j%3 == 0:
		p[x] = vet[g]
		x = x + 1
	g = g + 1
print(p)
	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:41:51) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0


for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0

for j in range(vet):
	if j%3 == 0:
		p[x] = vet[g]
		x = x + 1
	g = g + 1
print(p)
	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:42:08) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0


for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0

for i in range(vet):
	if i%3 == 0:
		p[x] = vet[g]
		x = x + 1
	g = g + 1
print(p)
	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:42:28) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0


for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0

for j in size(vet):
	if j%3 == 0:
		p[x] = vet[g]
		x = x + 1
	g = g + 1
print(p)
	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:43:04) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0


for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0

for j in range(size(vet):
	if j%3 == 0:
		p[x] = vet[g]
		x = x + 1
	g = g + 1
print(p)
	
 
	

	
-- ERROR:
File "XXXX", line 17
    for j in range(size(vet):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:43:05) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0


for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0

for j in range(size(vet):
	if j%3 == 0:
		p[x] = vet[g]
		x = x + 1
	g = g + 1
print(p)
	
 
	

	
-- ERROR:
File "XXXX", line 17
    for j in range(size(vet):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:43:16) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0


for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0

for j in range(size(vet):
	if j%3 == 0:
		p[x] = vet[g]
		x = x + 1
	g = g + 1
print(p)
	
 
	

	
-- ERROR:
File "XXXX", line 17
    for j in range(size(vet):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:43:28) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0


for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0

for j in range(size(vet)):
	if j%3 == 0:
		p[x] = vet[g]
		x = x + 1
	g = g + 1
print(p)
	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:43:48) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0


for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0

for i in range(size(vet)):
	if i%3 == 0:
		p[x] = vet[g]
		x = x + 1
	g = g + 1
print(p)
	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:44:01) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0


for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0

for i in range(vet):
	if i%3 == 0:
		p[x] = vet[g]
		x = x + 1
	g = g + 1
print(p)
	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:44:23) 
-- CODE:
from numpy import*

vet = array(eval(input("digite: ")))

aux = 0


for i in vet:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0

for j in range(vet):
	if j%3 == 0:
		p[x] = vet[g]
		x = x + 1
	g = g + 1
print(p)
	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:45:03) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

aux = 0


for i in v:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0

for j in range(v):
	if j%3 == 0:
		p[x] = v[g]
		x = x + 1
	g = g + 1
print(p)
	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:45:15) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

aux = 0


for i in v:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0

for j in size(v):
	if j%3 == 0:
		p[x] = v[g]
		x = x + 1
	g = g + 1
print(p)
	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:45:30) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

aux = 0


for i in v:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0

for i in size(v):
	if i%3 == 0:
		p[x] = v[g]
		x = x + 1
	g = g + 1
print(p)
	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:45:43) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

aux = 0


for i in v:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0

for i in (size(v)):
	if i%3 == 0:
		p[x] = v[g]
		x = x + 1
	g = g + 1
print(p)
	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:47:17) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

aux = 0


for i in range(size(v)):
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0

for i in v:
	if i%3 == 0:
		p[x] = v[g]
		x = x + 1
	g = g + 1
print(p)
	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:47:39) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

aux = 0


for i in v:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0

for j in v:
	if j%3 == 0:
		p[x] = v[g]
		x = x + 1
	g = g + 1
print(p)
	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:47:58) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

aux = 0


for i in v:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0


for j in range(v):
	if j%3 == 0:
		p[x] = v[g]
		x = x + 1
	g = g + 1
print(p)
	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:48:16) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

aux = 0


for i in v:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0


for j in range(size(v)):
	if j%3 == 0:
		p[x] = v[g]
		x = x + 1
	g = g + 1
print(p)
	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:48:29) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

aux = 0


for i in v:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0


for j in range(size(v)):
	if j%3 == 0:
		p[x] = v[g]
		x = x + 1
		g = g + 1
	print(p)
	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:48:59) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

aux = 0


for i in v:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0


for j in range(size(v)):
	if j%3 == 0:
		p[x] = v[g]
		x = x + 1
	print(p)
	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:51:38) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

aux = 0


for i in v:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0


for j in range(size(v)):
	if j%3 == 0:
		p[x] = v[p]
		x = x + 1
	g = g+1
print(p)


	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:51:47) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

aux = 0


for i in v:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0


for j in range(size(v)):
	if j%3 == 0:
		p[x] = v[x]
		x = x + 1
	g = g+1
print(p)


	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:52:07) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

aux = 0


for i in v:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0


for i in range(size(v)):
	if i%3 == 0:
		p[x] = v[x]
		x = x + 1
	g = g+1
print(p)


	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:52:33) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

aux = 0


for i in v:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0


for i in range(size(v)):
	if i%3 == 0:
		p[x] = v[g]
		x = x + 1
		g = g+1
print(p)


	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:52:49) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

aux = 0


for i in v:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0


for i in v:
	if i%3 == 0:
		p[x] = v[g]
		x = x + 1
	g = g+1
print(p)


	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:53:01) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

aux = 0


for i in v:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0


for i in v:
	if i%3 == 0:
		p[x] = v[g]
		x = x + 1
	g = g+1
print(p)


	
 
	

	
-- EXECUTION TIME:
1.21718
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
4
[5 7 8 9]
---- user output:
4
[15 33 36 63]
-- TEST CASE 2:
---- input:
[15,20,30,15,36,63,25,10,2]
---- correct output:
5
[0 2 3 4 5]
---- user output:
5
[15 30 15 36 63]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
3
[3 4 5]
---- user output:
3
[15 36 63]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:53:11) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

aux = 0


for i in v:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0


for i in range(size(v)):
	if i%3 == 0:
		p[x] = v[g]
		x = x + 1
	g = g+1
print(p)


	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:54:42) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

aux = 0


for i in v:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0


for i in range(size(v)):
	if v(i)%3 == 0:
		p[x] = v[g]
		x = x + 1
	g = g+1
print(p)


	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:54:58) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

aux = 0


for i in v:
	if i%3 == 0 :
		aux = aux + 1
print(aux)

p = zeros(aux, dtype=int)
x = 0
g = 0


for i in range(size(v)):
	if v[i]%3 == 0:
		p[x] = v[g]
		x = x + 1
	g = g+1
print(p)


	
 
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
